2005-10-17 Karsten Behrmann <BearPerson@sourcemage.org>
	* modules/debug: added debugging menu
	* default_debug: added global default debugging level
	* optionalSpell: use confirmation dialog function

2005-10-14 Karsten Behrmann <BearPerson@sourcemage.org>
	* modules/30spellinstall: fix typo in ssh key generation

2005-10-13 Karsten Behrmann <BearPerson@sourcemage.org>
	* modules/installation: force making /etc/shadow only root-readable

2005-10-11 Karsten Behrmann <BearPerson@sourcemage.org>
	* modules/debug: add debug framework
	* installer.sh, modules/*: employ new debug framework

2005-09-30 Karsten Behrmann <BearPerson@sourcemage.org>
	* doc/known_issues: add document for common problems and their fixes
	* doc/chroot-howto: add memo on chroot generation and pitfalls

2005-09-29 Karsten Behrmann <BearPerson@sourcemage.org>
	* misc/release.sh: fix up relative paths for p4
	* README: added policy on devel releases
	* ChangeLog: fix formatting
	* iso.dirs, skeleton/etc/fstab: add /sys
	* iso.packages, skel/initrd/sbin/smgl.init: enable hotplug
	* gen-scripts/listparse: auto-add dependencies, generate minimal list
	  more intelligently

2005-09-28 Karsten Behrmann <BearPerson@sourcemage.org>
	* diskStructure: misnamed variables, add recognition of RAID partitions
	* bg-install.sh: add dialog stuff
	* smgl.multi, skeleton/etc/sorcery/local/depends/linux.p.ppc:
	  add linux config for ppc

2005-09-26 Karsten Behrmann <BearPerson@sourcemage.org>
	* diskStructure: added menu for mount points (bug 9348)
	                 postpone/explain bug 9803

2005-09-25 David Kowis <dkowis@sourcemage.org>
	* diskStructure: After much head bashing, the /dev/ removal needs to be
	  applied globally to the output of a --checklist because we're getting
	  more than one line of data.

2005-09-25 David Kowis <dkowis@sourcemage.org>
	* diskStructure: Adding more debugging to RAID stuff to figure out why
	  it's still broke.

2005-09-25 David Kowis <dkowis@sourcemage.org>