@@ -1,3 +1,5 @@
 #!/bin/bash
 export HOME=/root
+export SHELL
+cd /
 exec /bin/bash -l
