@@ -1,1 +1,1 @@
-sourcemage-install
+smgl-install
