@@ -1,1 +1,1 @@
-127.0.0.1 sourcemage-install
+127.0.0.1 smgl-install
