@@ -1,3 +1,4 @@
 INSTALLER_VERSION=__SMGL_TEMPLATE_ISO_VERSION__
 SORCERY_VERSION=__SORCERY_VERSION__
 GRIMOIRE_VERSION=__GRIMOIRE_VERSION__
+KERNEL_VERSION=__KERNEL_VERSION__
